@@ -1451,3 +1451,4 @@
 		be examined in set_GLOBALS_x().
 		Minor cleanup in treesearch_gtk2.c: removed redundant show
 		widget invocation.
+		Added missing compressBound() for compress2() dest mallocs.
